언급수 통계 집계에 정당 이름 추가